force-app/main/default/objects/DSALES_Familia__c/DSALES_Familia__c.object-meta.xml
<CustomObject>
    <label>Familia</label>
    <nameField>
        <label>Nombre de Familia</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Familias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>