force-app/main/default/objects/DSALES_Familia__c/fields/DSALES_Clase__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Clase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clase</label>
    <referenceTo>DSALES_Clase__c</referenceTo>
    <relationshipLabel>Familias</relationshipLabel>
    <relationshipName>Familias</relationshipName>
    <type>Lookup</type>
</CustomField>