force-app/main/default/objects/DSALES_Familia__c/fields/DSales_IDexterior__c.field-meta.xml
<CustomField>
    <fullName>DSales_IDexterior__c</fullName>
    <label>ID exterior</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>