force-app/main/default/objects/DSALES_Familia__c/fields/DSALES_TipoSeguro__c.field-meta.xml
<CustomField>
    <fullName>DSALES_TipoSeguro__c</fullName>
    <label>Tipo de Seguro</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DSALES_Tipodeproducto__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seguro de Motos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>