force-app/main/default/objects/DSALES_Familia__c/recordTypes/DSALES_GEX.recordType-meta.xml
<RecordType>
    <fullName>DSALES_GEX</fullName>
    <active>true</active>
    <label>Garantía Extendida</label>
</RecordType>