force-app/main/default/objects/DSALES_Familia__c/recordTypes/DSALES_SM.recordType-meta.xml
<RecordType>
    <fullName>DSALES_SM</fullName>
    <active>true</active>
    <label>Seguro de Motos</label>
</RecordType>